--- a/css/grid.css
+++ b/css/grid.css
@@ -27,9 +27,10 @@
 
 }
 
-@media only screen and (min-width:60em) {
+@media only screen and (min-width: 60em) {
 
-.l-1 {
-  width: 1/3;
-}
+  .l-1-3 {
+    width: 33.3333%;
+  }
+
 }
